百度地图定位

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".ui.main.fragment.MianFragment">
+    tools:context=".ui.MainFragment">
 
     <com.xktt.renovation.widgets.ScrollViewPager
         android:id="@+id/viewPager"
