--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -68,4 +68,11 @@
     <color name="Grey800">#424242</color>
     <color name="Grey900">#212121</color>
 
+    <color name="text_black">#3F3F3F</color>
+    <color name="text_grey">#9F9F9F</color>
+    <color name="text_grey1">#6F6F6F</color>
+    <color name="view_grey">#F1F2F3</color>
+    <color name="text_white">#FFFFFF</color>
+    <color name="app_blue">#029A57</color>
+    <color name="error_color">#DFDFDF</color>
 </resources>
