--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -141,6 +141,7 @@
                 android:textSize="@dimen/sp16"
                 android:textStyle="bold"/>
             <LinearLayout
+                android:id="@+id/ll_diary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
