--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
         <dimen name="dp16">16dp</dimen>
         <dimen name="dp18">18dp</dimen>
         <dimen name="dp20">20dp</dimen>
+        <dimen name="dp25">25dp</dimen>
         <dimen name="dp30">30dp</dimen>
         <dimen name="dp34">34dp</dimen>
         <dimen name="dp35">35dp</dimen>
@@ -28,6 +29,19 @@
         <dimen name="dp80">80dp</dimen>
         <dimen name="dp90">90dp</dimen>
         <dimen name="dp100">100dp</dimen>
+        <dimen name="dp110">110dp</dimen>
+        <dimen name="dp120">120dp</dimen>
+        <dimen name="dp130">130dp</dimen>
+        <dimen name="dp140">140dp</dimen>
+        <dimen name="dp150">150dp</dimen>
+        <dimen name="dp160">160dp</dimen>
+        <dimen name="dp170">170dp</dimen>
+        <dimen name="dp180">180dp</dimen>
+        <dimen name="dp190">190dp</dimen>
+        <dimen name="dp200">200dp</dimen>
+        <dimen name="dp300">300dp</dimen>
+        <dimen name="dp400">400dp</dimen>
+        <dimen name="dp500">500dp</dimen>
 
         <dimen name="sp2">2sp</dimen>
         <dimen name="sp4">4sp</dimen>
