--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,6 +54,35 @@
         <item name="qmui_topbar_image_btn_height">48dp</item>
     </style>
 
+    <style name="CommonButtonStyles">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/dp40</item>
+        <item name="android:background">@drawable/common_btn_bg_selector</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:textColor">@drawable/common_btn_text_selector</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginStart">@dimen/dp15</item>
+        <item name="android:layout_marginEnd">@dimen/dp15</item>
+    </style>
+
+    <!-- CustomProgressDialog -->
+    <style name="CustomProgressDialog" parent="@android:style/Theme.Dialog">
+        <!-- Dialog的windowFrame框为无 -->
+        <item name="android:windowFrame">@null</item>
+        <!-- 是否浮现在activity之上 -->
+        <item name="android:windowIsFloating">true</item>
+        <!-- 是否半透明 -->
+        <item name="android:windowIsTranslucent">true</item>
+        <!-- 是否显示title -->
+        <item name="android:windowNoTitle">true</item>
+        <!-- 设置dialog的背景 -->
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!-- 用来控制灰度的值，当为1时，界面除了我们的dialog内容是高亮显示的，dialog以外的区域是黑色的，完全看不到其他内容，系统的默认值是0.5 -->
+        <item name="android:backgroundDimAmount">0.2</item>
+        <!-- 是否模糊 -->
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
 
     <style name="BaseNoActionBarTheme" parent="Theme.AppCompat.Light.NoActionBar" tools:ignore="ResourceName" />
     <!--白色主题样式，，注意每一项都不能少-->
@@ -114,5 +143,25 @@
         <item name="picture.original.text.color">@color/picture_color_53575e</item>
         <!--标题栏高度-->
         <item name="picture.titleBar.height">@dimen/dp50</item>
+    </style>
+
+    <style name="BottomDialog" parent="android:Theme.Holo.Light.Dialog" tools:ignore="ResourceName">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="BottomDialog1" parent="android:Theme.Holo.Light.Dialog" tools:ignore="ResourceName">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
 </resources>
