--- a/app/src/main/res/layout/activity_personal_data.xml
+++ b/app/src/main/res/layout/activity_personal_data.xml
@@ -64,6 +64,29 @@
             android:textSize="@dimen/sp14"
             android:textColor="@color/text_black"
             android:gravity="end"
-            android:text="@string/app_name"/>
+            tools:text="@string/app_name"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_pass"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp50"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:background="@color/text_white"
+        android:layout_marginTop="@dimen/dp1"
+        android:paddingLeft="@dimen/dp10"
+        android:paddingRight="@dimen/dp10">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sp14"
+            android:textColor="@color/text_black"
+            android:text="修改登录密码"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/icon_more_right"/>
     </LinearLayout>
 </LinearLayout>
