--- a/app/src/main/res/layout/item_login_dialog.xml
+++ b/app/src/main/res/layout/item_login_dialog.xml
@@ -141,7 +141,7 @@
                 android:layout_height="match_parent"
                 android:background="@null"
                 android:hint="请输入验证码"
-                android:maxLength="11"
+                android:maxLength="6"
                 android:maxLines="1"
                 android:textSize="@dimen/sp14"
                 android:inputType="number"/>
@@ -183,7 +183,7 @@
             android:visibility="gone">
 
             <EditText
-                android:inputType="textVisiblePassword"
+                android:inputType="textPassword"
                 android:id="@+id/ed_pass"
                 android:textColor="@color/text_black"
                 android:layout_width="match_parent"
