--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,6 +23,7 @@
         <dimen name="dp34">34dp</dimen>
         <dimen name="dp35">35dp</dimen>
         <dimen name="dp40">40dp</dimen>
+        <dimen name="dp45">45dp</dimen>
         <dimen name="dp50">50dp</dimen>
         <dimen name="dp60">60dp</dimen>
         <dimen name="dp70">70dp</dimen>
