--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -10,4 +10,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <TextView
+        android:id="@+id/tv_ad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/text_white"
+        android:textSize="@dimen/sp12"
+        android:paddingStart="@dimen/dp6"
+        android:paddingEnd="@dimen/dp6"
+        android:paddingTop="@dimen/dp2"
+        android:paddingBottom="@dimen/dp2"
+        android:layout_marginTop="@dimen/dp30"
+        android:layout_marginEnd="@dimen/dp8"
+        android:background="@drawable/bg_loading_dialog"
+        android:visibility="gone"
+        tools:text="6s"
+        tools:visibility="visible"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
