--- a/baselibs/src/main/res/values/colors.xml
+++ b/baselibs/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
 
     <color name="white">#ffffff</color>
     <color name="transparent_75">#ba000000</color>
+    <color name="transparent">#00000000</color>
 
 </resources>
