--- a/lib_common/src/main/res/values/colors.xml
+++ b/lib_common/src/main/res/values/colors.xml
@@ -47,6 +47,7 @@
     <color name="textColorVice">#6C6C6C</color>
     <color name="viewLineColor">#F0F0F0</color>
     <color name="transparent_75">#ba000000</color>
+    <color name="transparent">#00000000</color>
 
     <color name="divider">@color/Grey700</color>
 
