--- a/baselibs/src/main/res/values/colors.xml
+++ b/baselibs/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="white">#ffffff</color>
     <color name="transparent_75">#ba000000</color>
     <color name="transparent">#00000000</color>
-
+    <color name="design_load_image_default_color">#ebebeb</color>
+    <color name="app_color_theme_1">#EF5362</color>
 </resources>
