--- a/module_home/src/main/res/layout/item_news_list_layout_1.xml
+++ b/module_home/src/main/res/layout/item_news_list_layout_1.xml
@@ -10,9 +10,9 @@
         android:id="@+id/img_cover"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp70"
-        android:layout_marginTop="@dimen/dp_10"
         android:layout_marginEnd="@dimen/dp16"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_title"
+        app:layout_constraintBottom_toBottomOf="@id/tv_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintDimensionRatio="3:2"
         android:scaleType="centerCrop"/>
@@ -52,13 +52,15 @@
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/img_cover"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/img_cover"
         android:layout_marginStart="@dimen/dp16"
+        android:layout_marginTop="@dimen/dp10"
         android:layout_marginEnd="@dimen/dp_10"
         android:textSize="@dimen/sp18"
         android:textColor="@color/text_black"
+        android:minLines="3"
         android:maxLines="3"
         android:ellipsize="end"
         tools:text="@string/appbar_scrolling_view_behavior" />
@@ -67,9 +69,10 @@
         android:id="@+id/image_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@id/img_cover"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/ll_bottom"
         app:layout_constraintBottom_toBottomOf="@id/ll_bottom"
+        android:layout_marginEnd="@dimen/dp16"
         android:src="@mipmap/ic_delete_in_circle_gray"
         android:visibility="visible" />
 
@@ -77,7 +80,7 @@
         android:id="@+id/ll_bottom"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/img_cover"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
         android:layout_marginTop="@dimen/dp10"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="@dimen/dp16"
