添加加载、无数据、无网络动画

--- a/lib_common/src/main/res/values/colors.xml
+++ b/lib_common/src/main/res/values/colors.xml
@@ -58,6 +58,7 @@
 
     <color name="color_F16D58">#F16D58</color>
     <color name="color_ff4c39">#FF4C39</color>
+    <color name="color_40f75959">#40f75959</color>
 
     <color name="Grey50">#FAFAFA</color>
     <color name="Grey100">#F5F5F5</color>
